lib: build: Use Meson build in scripts for C library and bindings
 * .appveyor.yml: Install ninja and meson
 * .gitignore: Ignore /build directory
 * .travis.yml: Install ninja and meson
 * Cargo.lock: Remove cc
 * lib/Cargo.toml: Remove cc build dependency
 * lib/binding_rust/build.rs: Use meson and ninja for Rust binding build
 * lib/binding_{rust,web}/meson.build: Include binding helpers in tree-sitter library
 * lib/meson.build: Add binding sub-directories based on build configuration option
 * lib/src/lib.c: Remove monolithic library source file
 * meson.build: Add some default options
 * meson_options.txt: Add option to select the library binding to build: C, Rust, or web
 * script/build-lib: Use meson and ninja for C library build
 * script/build-wasm: Use meson and ninja for web binding build
 * script/util/emscripten-meson-dockerfile: Dockerfile for building library web bindings using Emscripten, meson, and ninja
 * script/util/meson_wasm_cross.txt: Meson cross-file for Emscripten toolchain

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,18 @@ install:
   # Terminate early unless building either a tag or a PR.
   - if "%APPVEYOR_REPO_TAG%" == "false" if not "%APPVEYOR_REPO_BRANCH%" == "master" appveyor exit
 
+  # Install ninja
+  - mkdir C:\ninja-build
+  - ps: (new-object net.webclient).DownloadFile('https://github.com/mesonbuild/cidata/raw/master/ninja.exe', 'C:\ninja-build\ninja.exe')
+  # Set paths to dependencies (based on architecture)
+  - if "%PLATFORM%" == "x86" (set PYTHON_ROOT=C:\python37) else (set PYTHON_ROOT=C:\python37-x64)
+  # Print out dependency paths
+  - echo Using Python at "%PYTHON_ROOT%"
+  # Add neccessary paths to PATH variable
+  - set PATH=%cd%;C:\ninja-build;%PYTHON_ROOT%;%PYTHON_ROOT%\Scripts;%PATH%
+  # Install meson
+  - pip install meson
+
   # Install rust
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - IF "%PLATFORM%" == "x86" rustup-init -y --default-toolchain stable --default-host i686-pc-windows-msvc
