--- a/lib/meson.build
+++ b/lib/meson.build
@@ -3,8 +3,16 @@ ts_sources = []
 
 ts_include_directories = []
 
+binding = get_option('lib_binding')
+
 subdir('include')
 subdir('src')
+
+if binding == 'rust'
+  subdir('binding_rust')
+elif binding == 'web'
+  subdir('binding_web')
+endif
 
 library('tree-sitter',
         ts_sources,
