--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,11 @@
-project('tree-sitter', 'c',
+project('tree-sitter', ['c'],
         license: 'MIT',
         version: '0.15.10',
+        default_options : [
+            'c_std=c99',
+            'buildtype=debugoptimized',
+            'warning_level=2',
+        ],
 )
 
 subdir('lib')
