--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
   - nvm install 10
   - nvm use 10
 
+  # Install meson
+  - pip3 install meson
+
   # Download emscripten and create a shorthand for adding it to the PATH.
   # Don't add it to the path globally because it overrides the default
   # clang and node.
@@ -67,3 +70,15 @@ cache:
     - target/emsdk
     - test/fixtures/grammars
     - /home/travis/.emscripten_cache
+
+addons:
+  apt:
+    packages:
+      - python3-pip
+      - python3-setuptools
+      - python3-wheel
+      - ninja-build
+    update: true
+  homebrew:
+    packages:
+      - ninja
