--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -19,19 +19,20 @@ name = "benchmark"
 harness = false
 
 [dependencies]
-cc = "1.0"
 ansi_term = "0.11"
-difference = "2.0"
-lazy_static = "1.2.0"
-smallbitvec = "2.3.0"
+cc = "1.0"
 clap = "2.32"
+difference = "2.0"
 dirs = "2.0.2"
+glob = "0.3.0"
+lazy_static = "1.2.0"
 libloading = "0.5"
 once_cell = "0.1.8"
+regex = "1"
+regex-syntax = "0.6.4"
 serde = "1.0"
 serde_derive = "1.0"
-regex-syntax = "0.6.4"
-regex = "1"
+smallbitvec = "2.3.0"
 tiny_http = "0.6"
 webbrowser = "0.5.1"
 
