--- a/tags/Cargo.toml
+++ b/tags/Cargo.toml
@@ -20,6 +20,7 @@ crate-type = ["lib", "staticlib"]
 regex = "1"
 serde_json = "1.0"
 serde_derive = "1.0"
+memchr = "2.3"
 
 [dependencies.serde]
 version = "1.0"
