--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,18 +22,38 @@ jobs:
         os: [ubuntu-latest]
         toolchain: [stable]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-      - name: Install Rust
+      - name: Setup cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+
+      - name: Install rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
           profile: minimal
           override: true
 
-      - run: |
-          cargo build --release
+      - name: Build C library
+        run: make
+
+      - name: Build CLI
+        run: cargo build --release
+
+      - name: Setup fixture parsers
+        run: |
           script/fetch-fixtures
           script/generate-fixtures
-          script/test
-          script/benchmark
+
+      - name: Run tests
+        run: script/test
+
+      - name: Run benchmarks
+        run: script/benchmark
