cli test: use diff format for expected vs actual

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ ansi_term = "0.11"
 cc = "1.0"
 atty = "0.2"
 clap = "2.32"
-difference = "2.0"
+diffs = "0.4"
 dirs = "2.0.2"
 glob = "0.3.0"
 lazy_static = "1.2.0"
