Simplify setup for enabling/disabling allocation recording in the C lib

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -41,6 +41,11 @@ webbrowser = "0.5.1"
 version = ">= 0.17.0"
 path = "../lib"
 
+[dev-dependencies.tree-sitter]
+version = ">= 0.17.0"
+path = "../lib"
+features = ["allocation-tracking"]
+
 [dependencies.tree-sitter-highlight]
 version = ">= 0.3.0"
 path = "../highlight"
