cli: polish --update logs and swap out sexpr lib
* Do not reprint the list of changed tests, just the number of them

* Use new character for updated tests (arrow pointing up)

* Depend on the `tree-sitter-sexpr` crate that implements a thin
  idiomatic Rust layer to parse and pretty print S-expressions on top of
  a tree-sitter generated parser fo them.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -36,6 +36,7 @@ serde_derive = "1.0"
 smallbitvec = "2.3.0"
 tiny_http = "0.6"
 webbrowser = "0.5.1"
+tree-sitter-sexp = { git = "https://github.com/AbstractMachinesLab/tree-sitter-sexp", branch = "main" }
 
 [dependencies.tree-sitter]
 version = ">= 0.17.0"
