--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
+            emsdk-cache
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
 
@@ -42,8 +43,10 @@ jobs:
           override: true
 
       - name: Install emscripten
-        run: eval $(script/fetch-emscripten)
-        if: matrix.os == 'macos-latest'
+        uses: mymindstorm/setup-emsdk@v7
+        with:
+          version: 2.0.11
+          actions-cache-folder: emsdk-cache
 
       - name: Build C library
         run: make
