--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
+            emsdk-cache-${{ runner.os }}
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
 
@@ -45,6 +46,7 @@ jobs:
         uses: mymindstorm/setup-emsdk@v7
         with:
           version: 2.0.11
+          actions-cache-folder: emsdk-cache-${{ runner.os }}
 
       - name: Build C library
         run: make
