Fail CI in case of compiler warnings like dead_code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         run: script/build-wasm
 
       - name: Build CLI
-        run: cargo build --release
+        run: RUSTFLAGS="-D warnings" cargo build --release
 
       - name: Set up fixture parsers
         run: |
