CI: Add 'cargo fmt -- --check' to ci.yml
The step is placed right after Rust installation to fail faster.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
           toolchain: stable
           profile: minimal
 
+      - name: Check Rust code formatting
+        run: cargo fmt -- --check
+
       - name: Install emscripten
         uses: mymindstorm/setup-emsdk@v7
         with:
