Add a randomized test for query matching

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -76,6 +76,7 @@ features = ["std"]
 [dev-dependencies]
 rand = "0.8"
 tempfile = "3"
+pretty_assertions = "0.7.2"
 
 [build-dependencies]
 toml = "0.5"
