--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,15 +22,12 @@ harness = false
 ansi_term = "0.12"
 anyhow = "1.0"
 atty = "0.2"
-cc = "^1.0.58"
 clap = "2.32"
 difference = "2.0"
 dirs = "3.0"
 glob = "0.3.0"
 html-escape = "0.2.6"
 lazy_static = "1.2.0"
-libloading = "0.7"
-once_cell = "1.7"
 regex = "1"
 regex-syntax = "0.6.4"
 serde = "1.0"
@@ -53,6 +50,10 @@ features = ["allocation-tracking"]
 [dependencies.tree-sitter-highlight]
 version = ">= 0.3.0"
 path = "../highlight"
+
+[dependencies.tree-sitter-loader]
+version = ">= 0.19.0"
+path = "loader"
 
 [dependencies.tree-sitter-tags]
 version = ">= 0.1.0"
