--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -47,6 +47,10 @@ version = ">= 0.17.0"
 path = "../lib"
 features = ["allocation-tracking"]
 
+[dependencies.tree-sitter-config]
+version = ">= 0.19.0"
+path = "config"
+
 [dependencies.tree-sitter-highlight]
 version = ">= 0.3.0"
 path = "../highlight"
