--- a/cli/config/Cargo.toml
+++ b/cli/config/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "tree-sitter-loader"
-description = "Locates, builds, and loads tree-sitter grammars at runtime"
+name = "tree-sitter-config"
+description = "User configuration of tree-sitter's command line programs"
 version = "0.19.0"
 authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
 edition = "2018"
@@ -12,26 +12,9 @@ repository = "https://github.com/tree-sitter/tree-sitter"
 
 [dependencies]
 anyhow = "1.0"
-cc = "^1.0.58"
 dirs = "3.0"
-libloading = "0.7"
-once_cell = "1.7"
-regex = "1"
 serde = "1.0"
-serde_derive = "1.0"
 
 [dependencies.serde_json]
 version = "1.0"
 features = ["preserve_order"]
-
-[dependencies.tree-sitter]
-version = ">= 0.19"
-path = "../../lib"
-
-[dependencies.tree-sitter-highlight]
-version = ">= 0.19"
-path = "../../highlight"
-
-[dependencies.tree-sitter-tags]
-version = ">= 0.19"
-path = "../../tags"
