--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,9 +27,11 @@ difference = "2.0"
 dirs = "3.0"
 glob = "0.3.0"
 html-escape = "0.2.6"
+indexmap = "1"
 lazy_static = "1.2.0"
 regex = "1"
 regex-syntax = "0.6.4"
+rustc-hash = "1"
 serde = "1.0"
 serde_derive = "1.0"
 smallbitvec = "2.3.0"
