Added windows to github CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         os:
           - macos-latest
           - ubuntu-latest
+          - windows-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
