--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,8 +32,7 @@ lazy_static = "1.2.0"
 regex = "1"
 regex-syntax = "0.6.4"
 rustc-hash = "1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0.130", features = ["derive"] }
 smallbitvec = "2.5.1"
 tiny_http = "0.8"
 walkdir = "2.3"
