--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -26,6 +26,7 @@ lazy_static = { version = "1.2.0", optional = true }
 regex = "1"
 
 [build-dependencies]
+bindgen = "0.59.1"
 cc = "^1.0.58"
 
 [lib]
