--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -21,9 +21,15 @@ include = [
   "/src/unicode/*",
 ]
 
+[features]
+"wasm" = ["wasmtime", "wasmtime-c-api"]
+
 [dependencies]
-lazy_static = { version = "1.2.0", optional = true }
 regex = "1"
+# wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", optional = true }
+# wasmtime-c-api = { git = "https://github.com/bytecodealliance/wasmtime", optional = true }
+wasmtime = { path = "../../wasmtime/crates/wasmtime", optional = true }
+wasmtime-c-api = { path = "../../wasmtime/crates/c-api", optional = true }
 
 [build-dependencies]
 cc = "^1.0.58"
