--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,13 @@ path = "src/main.rs"
 name = "benchmark"
 harness = false
 
+[features]
+logging_lexer = ["tree-sitter/logging_lexer"]
+logging_parser = ["tree-sitter/logging_parser"]
+logging_query = ["tree-sitter/logging_query"]
+logging_changed_ranges = ["tree-sitter/logging_changed_ranges"]
+logging = ["tree-sitter/logging"]
+
 [dependencies]
 ansi_term = "0.12"
 anyhow = "1.0"
