--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -64,11 +64,11 @@ endif (MSVC)
 #=========#
 
 # setup the version numbering
-set_property(TARGET "${LIBRARY_NAME}" PROPERTY VERSION "1.0.0")
-set_property(TARGET "${LIBRARY_NAME}" PROPERTY SOVERSION "1")
+set_property(TARGET "${LIBRARY_NAME}" PROPERTY VERSION "${${PROJECT_NAME}_VERSION}")
+set_property(TARGET "${LIBRARY_NAME}" PROPERTY SOVERSION "${${PROJECT_NAME}_VERSION_MAJOR}")
 
 install(FILES ${Header_Files} "${_export_file}"
-        TYPE "INCLUDE")
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")
 
 #====================#
 # Package to install #
