--- a/lib/include/CMakeLists.txt
+++ b/lib/include/CMakeLists.txt
@@ -19,4 +19,5 @@ target_include_directories(
 # Install #
 #=========#
 
-install(FILES ${Header_Files} TYPE "INCLUDE")
+install(FILES ${Header_Files}
+        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")
