[cmake,**CMakeLists.txt] Rename '_' to '-'; install headers to 'tree_sitter'; utilise `INTERFACE` library for 'tree_sitter' include

--- a/lib/include/tree_sitter/CMakeLists.txt
+++ b/lib/include/tree_sitter/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(LIBRARY_NAME "${PROJECT_NAME}_highlight")
+set(LIBRARY_NAME "${PROJECT_NAME}")
 
-set(Header_Files "tree_sitter/highlight.h")
+set(Header_Files "api.h" "parser.h")
 source_group("Header Files" FILES "${Header_Files}")
 
 add_library("${LIBRARY_NAME}" INTERFACE "${Header_Files}")
@@ -8,10 +8,11 @@ add_library("${LIBRARY_NAME}" INTERFACE "${Header_Files}")
 target_link_libraries("${LIBRARY_NAME}" INTERFACE "${PROJECT_NAME}_compiler_flags")
 
 include(GNUInstallDirs)
+get_filename_component(THIS_PARENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" DIRECTORY)
 target_include_directories(
         "${LIBRARY_NAME}"
         INTERFACE
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+        "$<BUILD_INTERFACE:${THIS_PARENT_DIR}>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
 )
 
