--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,8 +81,14 @@ jobs:
           script/generate-fixtures
           script/generate-fixtures-wasm
 
+      - name: Install latest nextest release
+        uses: taiki-e/install-action@nextest
+
       - name: Run main tests
-        run: cargo test
+        run: cargo nextest run --workspace --lib --tests --bins --examples
+
+      - name: Run main flaky tests
+        run: cargo nextest run --workspace --lib --tests --bins --examples --retries 10 -- --ignored
 
       - name: Run wasm tests
         run: script/test-wasm
