ci: rustup install rustfmt and clippy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
+          components: rustfmt, clippy
 
       - name: Check Rust code formatting
         run: cargo fmt -- --check
