--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,7 +24,7 @@ test_script:
   # Fetch and regenerate the fixture parsers
   - script\fetch-fixtures.cmd
   - cargo build --release
-  - script\generate-fixtures.cmd
+  - script\generate-fixtures.cmd --build
 
   # Run main tests
   - cargo nextest run --workspace --lib --tests --bins --examples
