--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   CARGO_INCREMENTAL: 0
+  RUST_BACKTRACE: 1
 
 jobs:
   unix-tests:
@@ -27,6 +28,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#env
+      # >> Variables in the env map cannot be defined in terms of other variables in the map.
+      - name: Set TREE_SITTER_LIBDIR to a scratch dir
+        run: |
+          echo TREE_SITTER_LIBDIR=${{ github.workspace }}/target/scratch >> $GITHUB_ENV
 
       # Work around https://github.com/actions/cache/issues/403.
       - name: Use GNU tar
@@ -121,6 +128,11 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      # https://github.com/actions/runner-images/issues/5251#issuecomment-1071030822
+      - name: Set TREE_SITTER_LIBDIR to a scratch dir
+        run: |
+          echo TREE_SITTER_LIBDIR=${{ github.workspace }}\target\scratch | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Cache artifacts
         id: cache
