fix: update project_options to 0.26.3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,18 @@
 # cmake --build ./build --config Release
 # cmake --install ./build --prefix <install-location>
 
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.20)
+# fix DOWNLOAD_EXTRACT_TIMESTAMP warning in FetchContent
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
+  cmake_policy(SET CMP0135 NEW)
+endif()
 
-# Add project_options v0.25.2
+# Add project_options v0.26.3
 # https://github.com/aminya/project_options
 include(FetchContent)
 FetchContent_Declare(
   _project_options
-  URL https://github.com/aminya/project_options/archive/refs/tags/v0.25.2.zip
+  URL https://github.com/aminya/project_options/archive/refs/tags/v0.26.3.zip
 )
 FetchContent_MakeAvailable(_project_options)
 include(${_project_options_SOURCE_DIR}/Index.cmake)
