ci: Appveyor workaround
Appveyor error:
  warning: spurious network error (1 tries remaining): [35] SSL connect error (schannel: next InitializeSecurityContext failed: SEC_E_ILLEGAL_MESSAGE (0x80090326) - This error usually occurs when a fatal SSL/TLS alert is received (e.g. handshake failed). More detail may be available in the Windows System event log.)
  error: failed to download from `https://crates.io/api/v1/crates/fastrand/1.9.0/download`
  Caused by:
    [35] SSL connect error (schannel: next InitializeSecurityContext failed: SEC_E_ILLEGAL_MESSAGE (0x80090326) - This error usually occurs when a fatal SSL/TLS alert is received (e.g. handshake failed). More detail may be available in the Windows System event log.)
  Command exited with code 101

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,7 @@
+# https://help.appveyor.com/discussions/problems/7115-curl-cant-download-files-through-ssl
+init:
+  - ps: Disable-NetFirewallRule -DisplayName 'Core Networking - Group Policy (LSASS-Out)'
+
 build: false
 install:
   # Terminate early unless building either a tag or a PR.
