--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Get the MSRV from the package metadata
       id: msrv
-      run: cargo metadata --no-deps --format-version 1 | jq -r '"version=" + (.packages[] | select(.name = "tree-sitter").rust_version)' >> $GITHUB_OUTPUT
+      run: cargo metadata --no-deps --format-version 1 | jq -r '"version=" + (.packages[] | select(.name == "tree-sitter-cli").rust_version)' >> $GITHUB_OUTPUT
     - name: Install rust toolchain (v${{ steps.msrv.outputs.version }})
       uses: dtolnay/rust-toolchain@master
       with:
