--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -72,6 +72,7 @@ jobs:
       shell: bash
       run: |
         echo "PROJECT_NAME=tree-sitter" >> $GITHUB_ENV
+        echo "PROJECT_CLI_NAME=tree-sitter-cli" >> $GITHUB_ENV
         echo "PROJECT_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' Cargo.toml | head -n1)" >> $GITHUB_ENV
         echo "PROJECT_MAINTAINER=$(sed -n 's/^authors = \["\(.*\)"\]/\1/p' Cargo.toml)" >> $GITHUB_ENV
         echo "PROJECT_HOMEPAGE=$(sed -n 's/^homepage = "\(.*\)"/\1/p' Cargo.toml)" >> $GITHUB_ENV
@@ -145,7 +146,7 @@ jobs:
         # Setup paths
         BIN_DIR="${{ env.CICD_INTERMEDIATES_DIR }}/stripped-release-bin/"
         mkdir -p "${BIN_DIR}"
-        BIN_NAME="${{ env.PROJECT_NAME }}${EXE_suffix}"
+        BIN_NAME="${{ env.PROJECT_CLI_NAME }}${EXE_suffix}"
         BIN_PATH="${BIN_DIR}/${BIN_NAME}"
 
         # Copy the release build binary to the result location
@@ -166,7 +167,7 @@ jobs:
       run: |
         # test only library unit tests and binary for arm-type targets
         unset CARGO_TEST_OPTIONS
-        unset CARGO_TEST_OPTIONS ; case ${{ matrix.job.target }} in arm-* | aarch64-*) CARGO_TEST_OPTIONS="--bin ${PROJECT_NAME}" ;; esac;
+        unset CARGO_TEST_OPTIONS ; case ${{ matrix.job.target }} in arm-* | aarch64-*) CARGO_TEST_OPTIONS="--bin ${PROJECT_CLI_NAME}" ;; esac;
         echo "CARGO_TEST_OPTIONS=${CARGO_TEST_OPTIONS}" >> $GITHUB_OUTPUT
 
     - name: Set up fixture parsers
