--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 name: Build & Test
 
 env:
-  EMSCRIPTEN_CACHE_FOLDER: ${{ runner.temp }}/emsdk-cache
   CARGO_TERM_COLOR: always
   RUSTFLAGS: "-D warnings"
   CROSS_DEBUG: 1
@@ -45,6 +44,7 @@ jobs:
     - name: Read Emscripten version
       run: |
         echo "EMSCRIPTEN_VERSION=$(cat cli/emscripten-version)" >> $GITHUB_ENV
+        echo "EMSCRIPTEN_CACHE_FOLDER=${{ runner.temp }}/emsdk-cache" >> $GITHUB_ENV
 
     - name: Setup Emscripten cache
       uses: actions/cache@v2
