--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,6 @@ env:
   CROSS_DEBUG: 1
 
 on:
-  workflow_dispatch:
   workflow_call:
     inputs:
       ref:
@@ -27,8 +26,8 @@ jobs:
           - { name: linux-x86     , target: i686-unknown-linux-gnu      , os: ubuntu-latest  , use-cross: true }
           - { name: windows-x64   , target: x86_64-pc-windows-msvc      , os: windows-latest                   }
           - { name: windows-x86   , target: i686-pc-windows-msvc        , os: windows-latest                   }
-          - { name: macos-x64     , target: x86_64-apple-darwin         , os: macos-latest                     }
           - { name: macos-arm64   , target: aarch64-apple-darwin        , os: macos-latest                     }
+          - { name: macos-x64     , target: x86_64-apple-darwin         , os: macos-latest                     }
 
     env:
       BUILD_CMD: cargo
@@ -123,7 +122,7 @@ jobs:
         esac
 
     - name: Build C library
-      if: "!contains(matrix.job.os, 'windows')" # Requires an additional adapted Makefile for `cl.exe` compiler
+      if: ${{ !contains(matrix.job.os, 'windows') }} # Requires an additional adapted Makefile for `cl.exe` compiler
       run: make.sh CFLAGS="-Werror" -j
 
     - name: Build wasm library
@@ -138,7 +137,7 @@ jobs:
       run: script/fetch-fixtures
 
     - name: Generate fixtures
-      if: ${{ matrix.job.name != 'macos-arm64' }} # Can't run CLI on host
+      if: ${{ matrix.job.name != 'macos-arm64' }} # Can't natively run CLI on runner's host
       run: script/generate-fixtures
 
     - name: Generate WASM fixtures
@@ -146,7 +145,7 @@ jobs:
       run: script/generate-fixtures-wasm
 
     - name: Run main tests
-      if: ${{ matrix.job.name != 'macos-arm64' }} # Can't run CLI on host
+      if: ${{ matrix.job.name != 'macos-arm64' }} # Can't natively run CLI on runner's host
       run: $BUILD_CMD test --target=${{ matrix.job.target }}
 
     - name: Run wasm tests
