cicd: don't cancel runs on master by concurrency condition

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -9,7 +9,13 @@ on:
       - check/*
 
 concurrency:
-  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  group: >
+    ${{ github.workflow }} @ ${{
+      github.ref == 'refs/heads/master' && github.ref_name || ''
+    }}${{
+      github.ref == 'refs/heads/master' && github.sha
+      || github.event.pull_request.head.label || github.head_ref || github.ref
+    }}
   cancel-in-progress: true
 
 jobs:
